<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- Application -->
    <string name="app_name">GuestBook</string>

    <!-- Entries Fragment -->
    <string name="entries_new_entry_button">Add new entry</string>
    <string name="entries_not_logged_communicate">You are not logged in.</string>
    <string name="entries_not_logged_information">You are unable to add new entries before you log in.</string>
    <string name="entries_empty_communicate">There are no entries right now.</string>

    <!-- Entry Layout -->
    <string name="entry_author_and_date">%1$s - %2$s</string>

    <!-- Login Fragment -->
    <string name="login_options_header">GuestBook - Login Options</string>
    <string name="login_google_button">Sign in with Google</string>
    <string name="login_signin_email_button">Sign in with Email</string>
    <string name="login_signup_email_button">Sign up with Email</string>
    <string name="login_new_entry_communicate">To add new entry you have to be logged in!</string>
    <string name="login_error_google">There was an error with the google client.</string>
    <string name="login_error_connection">There was a problem with internet connection.</string>

    <!-- Error Dialog -->
    <string name="error_dialog_title">An error occurred</string>
    <string name="error_dialog_refresh_button">Refresh</string>
    <string name="error_dialog_continue_button">Continue</string>

    <!-- Information Dialog -->
    <string name="info_dialog_title">Anonymous user</string>
    <string name="info_dialog_message">Anonymous users are unable to add new entries. Please log-in.</string>
    <string name="info_dialog_dismiss_button">Dismiss</string>

    <!-- Email Login Fragment -->
    <string name="email_login_header">GuestBook - Sign in with Email</string>
    <string name="email_login_signin_button">Sign in</string>

    <!-- Signup Fragment -->
    <string name="signup_header">GuestBook - Sign up with Email</string>
    <string name="singup_button">Sign up</string>

    <!-- Forms Hints -->
    <string name="email_field">Email</string>
    <string name="password_field">Password</string>
    <string name="username_field">Username</string>
    <string name="retype_password_field">Retype Password</string>

    <!-- Forms Validator Errors -->
    <string name="form_validator_empty_password">Password could not be empty.</string>
    <string name="form_validator_empty_email">Email could not be empty.</string>
    <string name="form_validator_wrong_email">The email is not correct</string>
    <string name="form_validator_different_passwords">Passwords must match.</string>
    <string name="form_validator_empty_content">Content could not be empty.</string>
    <string name="form_validator_empty_username">Username could not be empty.</string>

    <!-- Profile Change Fragment -->
    <string name="edit_profile_header">GuestBook - Profile Settings</string>
    <string name="edit_profile_photo_description">Change current photo</string>
    <string name="edit_profile_save_button">Save changes</string>
    <string name="edit_profile_photo_label">Profile Photo</string>
    <string name="edit_profile_photo_sd_unmounted">You can\'t select a photo. Please insert SD card.</string>
    <string name="edit_profile_select_image_source">Select image source</string>

    <!-- Action Bar Items -->
    <string name="menu_item_logout">Logout</string>
    <string name="menu_item_settings">Settings</string>
    <string name="menu_item_refresh">Refresh</string>

    <!-- New Entry Dialog -->
    <string name="new_entry_dialog_header">New entry</string>
    <string name="new_entry_add_button">Add entry</string>
    <string name="new_entry_add_content">Enter your content here!</string>

    <!-- New Entry Fragment -->
    <string name="new_entry_header">Write new entry.</string>
    <string name="new_entry_button">Add entry</string>
    <string name="new_entry_content">Enter your content here!</string>

    <!-- Errors -->
    <string name="error_refresh">Click to refresh</string>

    <!-- Content Description Values -->
    <string name="profile_logout_button_desc">Logout button</string>
    <string name="profile_settings_button_desc">Settings button</string>


</resources>
