<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/white">

    <RelativeLayout
        android:id="@+id/guest_information"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_alignParentTop="true"
        android:background="@color/error_bg"
        android:visibility="gone">

        <TextView
            android:id="@+id/not_logged_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/entries_not_logged_communicate"
            android:textSize="18sp"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"/>

        <ImageView
            android:id="@+id/not_logged_information"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="5dp"
            android:src="@drawable/ic_menu_question"/>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/profile_header"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/user_header_bg"
        android:visibility="gone">

        <ImageView
            android:id="@+id/user_avatar"
            android:layout_width="?attr/actionBarSize"
            android:layout_height="?attr/actionBarSize"
            android:layout_marginLeft="10dp"/>

        <TextView
            android:id="@+id/user_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:textSize="@dimen/profile_name_size"
            android:textAllCaps="true"
            android:textStyle="bold"
            android:layout_toRightOf="@id/user_avatar"
            android:layout_marginLeft="5dp"
            android:layout_centerVertical="true"/>

        <ImageButton
            android:id="@+id/logout_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_action_logout"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"/>

        <ImageButton
            android:id="@+id/settings_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_action_settings"
            android:layout_toLeftOf="@id/logout_button"
            android:layout_marginRight="5dp"
            android:layout_centerVertical="true"/>

        <ImageButton
            android:id="@+id/refresh_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_action_refresh"
            android:layout_toLeftOf="@id/settings_button"
            android:layout_marginRight="5dp"
            android:layout_centerVertical="true"/>

    </RelativeLayout>

    <Button
        android:id="@+id/entry_button"
        android:layout_width="match_parent"
        android:layout_height="@dimen/entry_button_height"
        android:layout_alignParentBottom="true"
        android:background="@color/entry_button_bg"
        android:textAllCaps="true"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:text="@string/entries_new_entry_button"
        android:visibility="gone"/>

    <ListView
        android:id="@+id/entries_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerVertical="true"
        android:divider="@color/entry_list_divider"
        android:dividerHeight="1dp"
        android:scrollbars="none"
        android:layout_above="@id/entry_button"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="?attr/actionBarSize"/>

    <ProgressBar
        android:id="@android:id/progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:indeterminateDrawable="@drawable/progress_bar"
        android:visibility="gone"/>

    <include
        android:id="@+id/error_layout"
        layout="@layout/error_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:visibility="gone"/>

    <TextView
        android:id="@android:id/empty"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/entries_empty_communicate"
        android:textStyle="bold"
        android:visibility="gone"/>

</RelativeLayout>